# vitals-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  meson.build
build-aux/flatpak/: com.corecoding.Vitals.json
crates/vitals-app/: Cargo.toml
crates/vitals-app/src/: app.rs  main.rs  window.rs
crates/vitals-app/src/widgets/: history_graph.rs  mod.rs  preferences.rs  sensor_group.rs  sensor_row.rs
crates/vitals-core/: Cargo.toml
crates/vitals-core/examples/: benchmark.rs
crates/vitals-core/src/: config.rs  format.rs  history.rs  hwmon.rs  lib.rs
crates/vitals-core/src/sensors/: battery.rs  fan.rs  memory.rs  mod.rs  network.rs  processor.rs  storage.rs  system.rs  temperature.rs  voltage.rs
crates/vitals-core/src/sensors/gpu/: amd.rs  drm.rs  mod.rs  nvidia.rs
crates/vitals-daemon/: Cargo.toml
crates/vitals-daemon/src/: dbus.rs  main.rs
data/: com.corecoding.Vitals.desktop  com.corecoding.Vitals.gschema.xml  com.corecoding.Vitals.metainfo.xml  com.corecoding.Vitals.service  meson.build
extension/: extension.js  metadata.json  stylesheet.css
po/: LINGUAS  POTFILES.in  meson.build
