[package]
name = "vitals-app"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"
description = "GTK4/Adwaita system vitals monitoring application"

[dependencies]
vitals-core = { path = "../vitals-core" }
gtk4 = "0.9"
libadwaita = { version = "0.7", features = ["v1_4"] }
glib = "0.20"
cairo-rs = "0.20"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
