[package]
name = "vitals-core"
version = "1.0.0"
edition = "2021"
license = "BSD-3-Clause"
description = "System vitals sensor library for Linux"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nix = { version = "0.29", features = ["fs"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
dirs = "5"
log = "0.4"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
