[package]
name = "vitals-daemon"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"
description = "D-Bus daemon exposing system vitals sensor data"

[dependencies]
vitals-core = { path = "../vitals-core" }
zbus = "5"
tokio = { version = "1", features = ["rt", "macros"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde_json = "1"
toml = "0.8"
